[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
futures-util = "0.3.29"
num-traits = "0.2.17"
tempfile = "3.8.1"
tokio = {version="1.34.0", features=["full"]}
tokio-stream = "0.1.14"
