[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
futures-util = "0.3.29"
num-traits = "0.2.17"
opentelemetry = "0.21.0"
opentelemetry-jaeger = "0.20.0"
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
opentelemetry_sdk = "0.21.1"
tempfile = "3.8.1"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.18", features = ["registry"] }
